# Effective

./: .gitignore  CMakeLists.txt  HMatrix.h  LICENSE  Matrix.cu  MatrixColView.h  MatrixScalarDiv.h  MatrixSub.h  MatrixTranspose.h  README.md  README2.md  Vector.cpp  Vector.cu  cuda_documentation_cpp.md  main  main2  matrixDecomposition.cpp  test_matrix.cpp
bindings/: matrix_bindings_cpu.cpp  matrix_bindings_gpu.cu  vector_bindings_cpu.cpp  vector_bindings_gpu.cu
cpu/: CMakeLists.txt
gpu/: CMakeLists.txt
include/: HMatrix.h  MatricCwiseQuotient.h  Matrix.cu  Matrix.h  MatrixAdd.h  MatrixBlockView.h  MatrixCompare.h  MatrixCuda.cu  MatrixCuda.cuh  MatrixCwiseProduct.h  MatrixExpression.h  MatrixMul.h  MatrixNegate.h  MatrixRowView.h  MatrixScalarMul.h  MatrixSub.h  Vector.cu  Vector.h  VectorAdd.h  VectorCuda.cu  VectorCuda.cuh  VectorExpression.h  VectorMul.h  VectorSub.h  eigenVal.cpp
src/: main.cpp  matrix_benchmark.py  test_matrix.cpp
